@startuml

class Unidade {
  - id : Long
  - nomeUnidade : String
  - endereco : Endereco
  - veiculos : List<Veiculo>
}

abstract class Veiculo {
  - id : Long
  - marca : String
  - modelo : String
  - ano : Integer
  - placa : String
  - chassi : String
  - kmAtual : Double
  - status : StatusVeiculo
  - unidade : Unidade
  - dataCadastro : LocalDateTime
  - atualizadoEm : LocalDateTime
  - ativo : boolean
  + Veiculo()
}

enum StatusVeiculo {
  DISPONIVEL
  LOCADO
  EM_MANUTENCAO
  DESATIVADO
}

class CarroPopular {
  - quantidadePortas : int
  - temArCondicionado : boolean
  + static builder() : Builder
}

class "CarroPopular.Builder" as CarroPopularBuilder {
  + marca(String) : Builder
  + modelo(String) : Builder
  + ano(Integer) : Builder
  + placa(String) : Builder
  + chassi(String) : Builder
  + kmAtual(Double) : Builder
  + unidade(Unidade) : Builder
  + quantidadePortas(int) : Builder
  + temArCondicionado(boolean) : Builder
  + build() : CarroPopular
}

class Motocicleta {
  - cilindrada : int
  - temBau : boolean
  + static builder() : Builder
}

class "Motocicleta.Builder" as MotocicletaBuilder {
  + marca(String) : Builder
  + modelo(String) : Builder
  + ano(Integer) : Builder
  + placa(String) : Builder
  + chassi(String) : Builder
  + kmAtual(Double) : Builder
  + unidade(Unidade) : Builder
  + cilindrada(int) : Builder
  + temBau(boolean) : Builder
  + build() : Motocicleta
}

Unidade "1" -- "0..*" Veiculo : gerencia >
Veiculo <|-- CarroPopular
Veiculo <|-- Motocicleta
Veiculo "1" -- "1" StatusVeiculo
CarroPopular +-- CarroPopularBuilder
Motocicleta +-- MotocicletaBuilder

@enduml
